# epsilon

./: .env.example  Cargo.toml  README.md
migrations/: 20240306191815_create_days_table.sql  20240307053210_create_tasks_table.sql  20240307055911_create_day_tasks.sql  20240308164437_create_rituals_table.sql  20240308171740_create_day_rituals_table.sql
script/: db
src/: completable.rs  days.rs  main.rs  repeatable.rs  rituals.rs  tasks.rs
