[package]
name = "to"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-async-std", "postgres", "uuid"] }
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.35"
envy = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
